@@ -441,15 +441,16 @@ namespace MCForge
         #endregion
 
         //
-        public void AddTree(Level Lvl, ushort x, ushort y, ushort z, Random Rand, bool blockChange = false)
+        public void AddTree(Level Lvl, ushort x, ushort y, ushort z, Random Rand, bool blockChange = false, bool overwrite = true)
         {
             byte height = (byte)Rand.Next(5, 8);
             short top = (short)(height - Rand.Next(2, 4));
             ushort xxx, yyy, zzz;
             for (ushort yy = 0; yy < top + height; yy++)
             {
-                if (blockChange) Lvl.Blockchange(x, (ushort)(y + yy), z, Block.trunk);
-                else Lvl.skipChange(x, (ushort)(y + yy), z, Block.trunk);
+                if (overwrite || Lvl.GetTile(x, (ushort)(y + yy), z) == Block.air || (y + yy == y && Lvl.GetTile(x, (ushort)(y + yy), z) == Block.shrub))
+                    if (blockChange) Lvl.Blockchange(x, (ushort)(y + yy), z, Block.trunk);
+                    else Lvl.skipChange(x, (ushort)(y + yy), z, Block.trunk);
             }
 
 
@@ -470,11 +471,9 @@ namespace MCForge
                                     yyy = (ushort)(y + yy + height);
                                     zzz = (ushort)(z + zz);
 
-                                    if (xxx != x || zzz != z || yy >= top)
-                                    {
+                                    if ((xxx != x || zzz != z || yy >= top) && (overwrite || Lvl.GetTile(xxx, yyy, zzz) == Block.air))
                                         if (blockChange) Lvl.Blockchange(xxx, yyy, zzz, Block.leaf);
                                         else Lvl.skipChange(xxx, yyy, zzz, Block.leaf);
-                                    }
                                 }
                                 catch { }
                             }
@@ -483,14 +482,16 @@ namespace MCForge
                 }
             }
         }
-        public void AddCactus(Level Lvl, ushort x, ushort y, ushort z, Random Rand, bool blockChange = false)
+
+        public void AddCactus(Level Lvl, ushort x, ushort y, ushort z, Random Rand, bool blockChange = false, bool overwrite = true)
         {
             byte height = (byte)Rand.Next(3, 6);
             ushort yy;
 
             for (yy = 0; yy <= height; yy++) {
-                if (blockChange) Lvl.Blockchange(x, (ushort)(y + yy), z, Block.green);
-                else Lvl.skipChange(x, (ushort)(y + yy), z, Block.green);
+                if (overwrite || Lvl.GetTile(z, (ushort)(y + yy), z) == Block.air)
+                    if (blockChange) Lvl.Blockchange(x, (ushort)(y + yy), z, Block.green);
+                    else Lvl.skipChange(x, (ushort)(y + yy), z, Block.green);
             }
 
             int inX = 0, inZ = 0;
@@ -504,13 +505,15 @@ namespace MCForge
 
             for (yy = height; yy <= Rand.Next(height + 2, height + 5); yy++)
             {
-                if (blockChange) Lvl.Blockchange((ushort)(x + inX), (ushort)(y + yy), (ushort)(z + inZ), Block.green);
-                else Lvl.skipChange((ushort)(x + inX), (ushort)(y + yy), (ushort)(z + inZ), Block.green);
+                if (overwrite || Lvl.GetTile((ushort)(x + inX), (ushort)(y + yy), (ushort)(z + inZ)) == Block.air)
+                    if (blockChange) Lvl.Blockchange((ushort)(x + inX), (ushort)(y + yy), (ushort)(z + inZ), Block.green);
+                    else Lvl.skipChange((ushort)(x + inX), (ushort)(y + yy), (ushort)(z + inZ), Block.green);
             }
             for (yy = height; yy <= Rand.Next(height + 2, height + 5); yy++)
             {
-                if (blockChange) Lvl.Blockchange((ushort)(x - inX), (ushort)(y + yy), (ushort)(z - inZ), Block.green);
-                else Lvl.skipChange((ushort)(x - inX), (ushort)(y + yy), (ushort)(z - inZ), Block.green);
+                if (overwrite || Lvl.GetTile((ushort)(x + inX), (ushort)(y + yy), (ushort)(z + inZ)) == Block.air)
+                    if (blockChange) Lvl.Blockchange((ushort)(x - inX), (ushort)(y + yy), (ushort)(z - inZ), Block.green);
+                    else Lvl.skipChange((ushort)(x - inX), (ushort)(y + yy), (ushort)(z - inZ), Block.green);
             }
         }
 
